Admin actua como controlador, notifica a procesos/particioens el paso del tiempo