@@ -2,10 +2,8 @@ package clases;
 import java.util.*;
 import clases.Proceso;
 import clases.Particion;
-import clases.Observable;
-import clases.Observer;
 
-public class Admin implements Observable{
+public class Admin{
 
     private int tiempo=0;
     private ArrayList<Proceso> procesos = new ArrayList<>();
@@ -22,72 +20,71 @@ public class Admin implements Observable{
     private ArrayList<Particion> tabla = new ArrayList<>();
     private ArrayList<Particion> particion = new ArrayList<>();
     
+    /* el nuevo plan seria que el admin recorra todas las listas de procesos y 
+    particiones consultando sus tiempos de arribo y finalizacion */
+    
+    public Admin(/*aca iran todos los datos del contexto*/){
+        this.estrategia = new worstFit();
+    }
+    
+    //notifica paso del tiempo
+    public void pasoTiempo(int tiempo){
+        for(Proceso proceso: procesos){
+            proceso.notificar(tiempo,this);
+        }
+        for(Particion particion: tabla){
+            particion.notificar(tiempo,this);
+        }
+    }
+    
+    
     public void arribo(Proceso proceso){
         this.arribos.add(proceso);
     }
-    
-    @Override
-    public void addObserver(Observer p,String tipo){
-        if(tipo.equals("particion")){
-            
-        }else if(tipo.equals("proceso")){
-            procesos.add(p);
-        }
-    }
-    @Override
-    public void deleteObserver(Observer p){
-        procesos.remove(p);
-    }
-    @Override
-    public void notify(int tiempo){
-        for(Proceso proceso: procesos){
-            proceso.update(tiempo);    
-        }
-        for(Particion particion: tabla){
-            particion.update(tiempo);
-        }
-    }
 
+    
     public void swapIn(Proceso proceso){
         
         //Seleccion de una particion
         int i=0;
         do{
             this.tiempo++;
-            notify(this.tiempo);
+            this.pasoTiempo(this.tiempo);
         }while(i<t_to_select);
         // va a buscar,selecionar y crear la nueva particion segun la estrategia
-        Particion particion=(estrategia.selecionarParticion(proceso,tabla));
+        Particion particion=(estrategia.seleccionar(proceso,this.tabla));
         
         //Carga de la particion
         int j=0;
         do{
             this.tiempo++;
-            notify(this.tiempo);
+            this.pasoTiempo(this.tiempo);
         }while(j<t_to_load); 
         // va a cargar en la tabla la particion       
         tabla.add(particion);
     }
 
+    
     public void swapOut(Particion particion){
         int i=0;
         do{
             this.tiempo++;
-            notify(this.tiempo);
+            this.pasoTiempo(this.tiempo);
         }while(i<t_to_free);
         tabla.remove(particion);
+        tabla.trimToSize();
     }
 
+    
     public void administrar(){
-        notify(this.tiempo);
+        this.pasoTiempo(this.tiempo);
         while (!(finTanda)){
-            if (!(arribos.empty())){
-                swapIn(arribos.getFirst()); 
-                //si getFirst no elimia el primer elemnto, removerlo
-            }else{
-                this.tiempo++;
-                notify(this.tiempo);
+            if (!(arribos.isEmpty())){
+                this.swapIn(arribos.get(0)); 
+                arribos.remove(0);
+                arribos.trimToSize();
             }
+            this.tiempo++;
         }
     }
    
